<resources>
    <string name="app_name">ipNX Mobile</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="signin">SIGN IN</string>
    <string name="signin_background">Sign-in background image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_service_plan">Manage Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_data_usage">Data Usage</string>
    <string name="title_activity_manage_settings">Manage Settings</string>
    <string name="title_activity_renew_payment">Renew Payment</string>
    <string name="title_activity_wifi_analyzer">WifiAnalyzerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wifi_analyzer">Wifi Analyzer</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedack_string">Are we meeting your expectations?\nDo you have any feedback or suggestions on how to serve you better?
        We would like to hear it.\nKindly tell us in the box below.
    </string>

    <string name="faq_signUp_answer">
        You can sign up for self-service portal by clicking the Signup button on the home page or
        the activation link sent in the email you received when you signed up for service with ipNX.
        The following are the steps to sign up.\n
        1. Enter your customer ID.\n
        2. Enter the email you provided when signing up for service with ipNX.\n
        3. Enter the username you would prefer to use on the portal.\n
        4. Enter your choice of password.\n
        5. Click on Submit button.\n
        6. A secret code will be sent to the email address you entered.\n
        7. Enter the secret code sent in your email in the input field.\n
        8. Click on Submit button.
    </string>

    <string name="faq_changePassword_answer">
        You can change your password following the steps below:\n
        1. Click on My Profile.\n
        2. Click on Change Password.\n
        3. Enter Current Passsword.\n
        4. Enter New Password.\n
        5. Enter Password Confirmation.\n
        6. Click Change Password button.
    </string>

    <string name="google_app_id">119754105709</string>
    <string name="infobip_application_code">6cd01f765ca308bf037610bd2c141f7a-ff887774-e932-484c-9b68-9c672ee14932</string>

    <!-- Main activity -->
    <string name="main_activity_title">Messages</string>
    <string name="main_activity_message_count_default">0</string>
    <string name="main_activity_total_received">"Received messages: "</string>

    <!-- Menu -->
    <string name="menu_action_gsm">GSM number</string>
    <string name="menu_action_registration_id">Registration ID</string>
    <string name="menu_action_erase">Erase inbox</string>
    <string name="menu_action_enable_primary">Enable primary</string>
    <string name="menu_action_disable_primary">Disable primary</string>
    <string name="menu_action_depersonalize">Depersonalize</string>

    <!-- Dialogs -->
    <string name="dialog_title_gsm">GSM</string>
    <string name="dialog_title_registration_id">Registration ID</string>
    <string name="dialog_action_save">Save</string>

    <!-- Toast messages -->
    <string name="toast_user_data_saved">User data saved</string>
</resources>
