<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/happyfamily"
        android:scaleType="centerCrop"
        android:tint="@color/signin_background_tint"
        android:contentDescription="@string/signin_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="64dp"
        android:layout_marginTop="120dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:drawableStart="@drawable/ic_profile"
            android:drawableLeft="@drawable/ic_profile"
            style="@style/SignInTextTheme" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_padlock"
            android:drawableLeft="@drawable/ic_padlock"
            style="@style/SignInTextTheme" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:background="@drawable/signin_button"
            android:textColor="@color/signin_button_text"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:onClick="openMainView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"/>

    </LinearLayout>
</RelativeLayout>
