<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:contentDescription="@string/signin_background"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_background" />

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:padding="64dp"
        tools:context=".LoginActivity">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/username"-->
        <!--android:textColor="@color/main_red" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                style="@style/SignInTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_profile"
                android:drawableRight="@drawable/ic_profile"
                android:hint="@string/username"
                android:inputType="text"
                android:text="bolajio" />

        </android.support.design.widget.TextInputLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/password"-->
        <!--android:textColor="@color/main_red" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#555">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                style="@style/SignInTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_padlock"
                android:drawableRight="@drawable/ic_padlock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#222222" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/signin_button"
            android:onClick="openMainView"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/heebo_bold"
                android:onClick="onForgotPasswordClicked"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black_text"/>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:background="@drawable/click_indicator"-->
                <!--android:onClick="onForgotPasswordClicked"-->
                <!--android:paddingLeft="4dp"-->
                <!--android:text="Click here."-->
                <!--android:textColor="@color/data_menu_blue"-->
                <!--android:textStyle="bold" />-->

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_progress_bar"
        android:gravity="center"
        android:text="...Logging in"
        android:textColor="@color/beige"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ipnx_logo"
        android:padding="32dp"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
